--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@
   width: 100vw;
   height: 100vh;
 }
+body.modal-open {
+  overflow: hidden;
+  /* position: fixed; */
+}
 .close-button {
   background-image: url("../images/close_icon.svg");
   background-repeat: no-repeat;
